--- a/PY_13_work/DS_P13_work.ipynb
+++ b/PY_13_work/DS_P13_work.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -187,7 +187,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +393,7 @@
        "4       0  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -415,7 +415,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2170,7 +2170,9 @@
     "    legend_title='Признак оттока',\n",
     "    legend_orientation='v'\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_image('IMG/img_9_3.jpg', engine='kaleido')"
    ]
   },
   {
@@ -2197,7 +2199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -3388,7 +3390,9 @@
     "    legend_title='Признак оттока',\n",
     "    legend_orientation='v'\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_image('IMG/img_9_4.jpg', engine='kaleido')"
    ]
   },
   {
@@ -3416,7 +3420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -24338,7 +24342,9 @@
     "    legend_orientation='v'\n",
     ")\n",
     "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_image('IMG/img_9_5.jpg', engine='kaleido')"
    ]
   },
   {
@@ -24362,7 +24368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -24413,7 +24419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -25375,7 +25381,9 @@
     "    legend=dict(x=.5, y=1.11, xanchor=\"center\")\n",
     ")\n",
     "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_image('IMG/img_9_7.jpg', engine='kaleido')"
    ]
   },
   {
@@ -25402,7 +25410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -26362,7 +26370,9 @@
     "    legend=dict(x=.5, y=1.05, xanchor=\"center\")\n",
     ")   \n",
     "\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_image('IMG/img_9_8.jpg', engine='kaleido')"
    ]
   },
   {
@@ -26387,7 +26397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -27327,7 +27337,9 @@
     "    height=500, #высота\n",
     "    color_continuous_scale='Reds' #палитра цветов\n",
     ")\n",
-    "fig.show()"
+    "fig.show()\n",
+    "\n",
+    "fig.write_image('IMG/img_9_9.jpg', engine='kaleido')"
    ]
   },
   {
@@ -27358,7 +27370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
