--- a/PY_13_work/DS_P13_work.ipynb
+++ b/PY_13_work/DS_P13_work.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### PYTHON-13. Визуализация данных \n",
-    "#### 9. Закрепление знаний"
+    "### PYTHON-13. Визуализация данных"
    ]
   },
   {
