--- a/sql_library.ipynb
+++ b/sql_library.ipynb
@@ -374,19 +374,26 @@
     "# Задание 09-14\n",
     "# Выберите топ-5 книг по заказам в каждом месяце. Столбцы к выводу — order_month, book_name, cnt, rnk. Отсортируйте вывод по месяцу в обратном порядке и по рангу.\n",
     "\n",
-    "# select \n",
-    "#   extract(MONTH from order_date) order_month, \n",
-    "#   o.book_name book_name,\n",
-    "#   count(o.book_id) cnt,\n",
-    "#   rnk\n",
-    "# from \n",
-    "#   other.book_orders o \n",
-    "#   join other.books b on o.book_id = b.book_id \n",
-    "# where \n",
-    "#   b.publishing_year >= 2021 - 10 \n",
-    "#   and order_date >= to_date('2019-01-01', 'YYYY-MM-DD') \n",
-    "# group by order_month, o.book_name\n",
-    "# order by order_month desc, rank"
+    "# select * \n",
+    "# from( \n",
+    "#     SELECT \n",
+    "#         order_month, \n",
+    "#         book_name, \n",
+    "#         cnt, \n",
+    "#         dense_rank() OVER (partition by order_month order by cnt desc) rnk \n",
+    "#     FROM (  \n",
+    "#             select \n",
+    "#                 extract(MONTH from order_date) order_month,       \n",
+    "#                 b.book_name, \n",
+    "#                 count(*) cnt \n",
+    "#             from other.\"book_orders\" o \n",
+    "#             join other.books b on o.book_id = b.book_id \n",
+    "#             where b.publishing_year >= 2021 - 10 and order_date >= to_date('2019-01-01', 'YYYY-MM-DD')                \n",
+    "#             group by extract(MONTH from order_date), b.book_name \n",
+    "#         ) month_books \n",
+    "#     ) rnk_books \n",
+    "# where rnk <= 5 \n",
+    "# order by order_month desc, rnk"
    ]
   },
   {
@@ -403,19 +410,20 @@
     "#     книги с одинаковым количеством заказов получают в выборке одинаковые места.\n",
     "\n",
     "\n",
-    "# select \n",
-    "#   extract(MONTH from order_date) order_month, \n",
-    "#   o.book_name book_name,\n",
-    "#   -- count(*) cnt\n",
-    "#   count(o.book_id) cnt\n",
-    "# from \n",
-    "#   other.book_orders o \n",
-    "#   join other.books b on o.book_id = b.book_id \n",
-    "# where \n",
-    "#   b.publishing_year >= 2021 - 10 \n",
-    "#   and order_date >= to_date('2019-01-01', 'YYYY-MM-DD') \n",
-    "# group by 1, 2\n",
-    "# order by order_month desc"
+    "# with books_rnk as( select EXTRACT(MONTH from bo.order_date) as order_month, \n",
+    "#     b.book_name, \n",
+    "#     count(b.book_id) as cnt, \n",
+    "#     dense_rank() over (partition by EXTRACT(MONTH from bo.order_date) \n",
+    "# order by count(b.book_id) desc) as rnk \n",
+    "# from other.book_orders bo \n",
+    "# join other.books b on b.book_id=bo.book_id \n",
+    "# where (b.publishing_year >= 2021-10) and (EXTRACT(YEAR FROM order_date) >= 2019) \n",
+    "# group by 1, 2)\n",
+    "\n",
+    "# select * \n",
+    "# from books_rnk \n",
+    "# where rnk <=5 \n",
+    "# order by 1 desc, rnk"
    ]
   },
   {
@@ -424,7 +432,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Задание 09-16"
+    "# Задание 09-16\n",
+    "# Добавьте в выборку средний рейтинг книг, \n",
+    "# пусть он учитывается во вторую очередь после заказов. Формат выгрузки остаётся прежним.\n",
+    "\n",
+    "\n"
    ]
   }
  ],
