--- a/sql_library.ipynb
+++ b/sql_library.ipynb
@@ -410,15 +410,18 @@
     "#     книги с одинаковым количеством заказов получают в выборке одинаковые места.\n",
     "\n",
     "\n",
-    "# with books_rnk as( select EXTRACT(MONTH from bo.order_date) as order_month, \n",
+    "# with books_rnk as\n",
+    "# ( \n",
+    "# select \n",
+    "#     EXTRACT(MONTH from bo.order_date) as order_month, \n",
     "#     b.book_name, \n",
     "#     count(b.book_id) as cnt, \n",
-    "#     dense_rank() over (partition by EXTRACT(MONTH from bo.order_date) \n",
-    "# order by count(b.book_id) desc) as rnk \n",
+    "#     dense_rank() over (partition by EXTRACT(MONTH from bo.order_date) order by count(b.book_id) desc) as rnk \n",
     "# from other.book_orders bo \n",
     "# join other.books b on b.book_id=bo.book_id \n",
     "# where (b.publishing_year >= 2021-10) and (EXTRACT(YEAR FROM order_date) >= 2019) \n",
-    "# group by 1, 2)\n",
+    "# group by 1, 2\n",
+    "# )\n",
     "\n",
     "# select * \n",
     "# from books_rnk \n",
@@ -436,24 +439,38 @@
     "# Добавьте в выборку средний рейтинг книг, \n",
     "# пусть он учитывается во вторую очередь после заказов. Формат выгрузки остаётся прежним.\n",
     "\n",
-    "\n"
+    "\n",
+    "# SELECT * \n",
+    "# from \n",
+    "# (\n",
+    "#     SELECT \n",
+    "#         extract(month from bo.order_date) AS order_month, \n",
+    "#         bo.book_name, \n",
+    "#         count (*) cnt, \n",
+    "#         dense_rank() over(partition by extract(month from bo.order_date) order by count(*) desc, b.book_average_rating desc) rnk \n",
+    "#     FROM other.book_orders bo \n",
+    "#     JOIN other.books b on bo.book_id=b.book_id \n",
+    "#     WHERE b.publishing_year >= DATE_PART('YEAR', CURRENT_DATE) - 10 and order_date >= to_date('2019-01-01', 'YYYY-MM-DD') \n",
+    "#     GROUP BY 1, 2, b.book_average_rating\n",
+    "# ) tabl \n",
+    "# WHERE rnk<=5 ORDER BY 1 desc, 4"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.2 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.11.1 (tags/v3.11.1:a7a450f, Dec  6 2022, 19:58:39) [MSC v.1934 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "7433707d81ffd2c707b178ba77df086fd6a94974051f69c2eac1d1de59e1235d"
+    "hash": "f99b0d7b2032c78286f87aca85b3d6980edc424abfeeb901c0d39dce752615a7"
    }
   }
  },
