7770 link and sql

--- a/sql_library.ipynb
+++ b/sql_library.ipynb
@@ -439,8 +439,8 @@
     "# Добавьте в выборку средний рейтинг книг, \n",
     "# пусть он учитывается во вторую очередь после заказов. Формат выгрузки остаётся прежним.\n",
     "\n",
-    "\n",
-    "# SELECT * \n",
+    "# ПРИМЕР ИЗ ОБСУЖДЕНИЯ ЗАДАЧИ -----------------------\n",
+    "# SELECT *\n",
     "# from \n",
     "# (\n",
     "#     SELECT \n",
@@ -453,7 +453,10 @@
     "#     WHERE b.publishing_year >= DATE_PART('YEAR', CURRENT_DATE) - 10 and order_date >= to_date('2019-01-01', 'YYYY-MM-DD') \n",
     "#     GROUP BY 1, 2, b.book_average_rating\n",
     "# ) tabl \n",
-    "# WHERE rnk<=5 ORDER BY 1 desc, 4"
+    "# WHERE rnk<=5 \n",
+    "# ORDER BY 1 desc, 4\n",
+    "# ---------------------------------------------------\n",
+    "\n"
    ]
   }
  ],
