--- a/ml_02.ipynb
+++ b/ml_02.ipynb
@@ -826,8 +826,8 @@
    "source": [
     "    Примечание.  \n",
     "    Обратите внимание, что мы получили ровно те же самые значения для параметров модели,  \n",
-    "    что является вполне ожидаемым, ведь метод $fit()$ у объекта LinearRegression реализует ту же самую формулу МНК,  \n",
-    "    которую мы прописали в функции $linear_regression()$.  \n",
+    "    что является вполне ожидаемым, ведь метод fit() у объекта LinearRegression реализует ту же самую формулу МНК,  \n",
+    "    которую мы прописали в функции linear_regression().  \n",
     "    Интерпретация коэффициентов остаётся той же."
    ]
   },
