--- a/Project_3/EDA_Project_3_model.ipynb
+++ b/Project_3/EDA_Project_3_model.ipynb
@@ -172,13 +172,13 @@
     }
    ],
    "source": [
-    "hotels = pd.read_csv('hotels.csv')\n",
+    "hotels = pd.read_csv('data/hotels.csv')\n",
     "hotels.head(3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -190,18 +190,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/anna/snap/jupyter/common/lib/python3.7/site-packages/joblib/_multiprocessing_helpers.py:45: UserWarning: [Errno 13] Permission denied.  joblib will operate in serial mode\n",
-      "  warnings.warn('%s.  joblib will operate in serial mode' % (e,))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Загружаем специальный инструмент для разбивки:  \n",
     "from sklearn.model_selection import train_test_split  "
@@ -209,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -220,14 +211,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Импортируем необходимые библиотеки:  \n",
     "from sklearn.ensemble import RandomForestRegressor # инструмент для создания и обучения модели  \n",
-    "from sklearn import metrics # инструменты для оценки точности модели  \n",
-    "  \n",
+    "from sklearn import metrics # инструменты для оценки точности модели  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Создаём модель  \n",
     "regr = RandomForestRegressor(n_estimators=100)  \n",
     "      \n",
@@ -236,7 +234,7 @@
     "      \n",
     "# Используем обученную модель для предсказания рейтинга отелей в тестовой выборке.  \n",
     "# Предсказанные значения записываем в переменную y_pred  \n",
-    "y_pred = regr.predict(X_test)  \n"
+    "y_pred = regr.predict(X_test)  "
    ]
   },
   {
@@ -297,7 +295,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
