--- a/Project_3/Project_3.ipynb
+++ b/Project_3/Project_3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -236,19 +236,20 @@
        "4  52.385601  4.847060  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# hotels = pd.read_csv('data/hotels.csv')\n",
     "hotels = pd.read_csv('data/hotels.csv')\n",
     "hotels.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +304,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.11.1"
   },
   "orig_nbformat": 4,
   "vscode": {
