--- a/Project_3/Project_3.ipynb
+++ b/Project_3/Project_3.ipynb
@@ -2,23 +2,129 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np # linear algebra\n",
-    "import pandas as pd # data processing, CSV file I/O (e.g. pd.read_csv)\n",
-    "\n",
+    "# установка дополнительных библиотек:\n",
+    "# !pip install Afinn\n",
+    "# !pip install nltk[twitter] \n",
+    "# !pip install --upgrade category_encoders\n",
+    "# !pip install geopy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# инструменты анализа и обработки данных\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "import geopy.distance\n",
+    "from scipy import stats\n",
+    "from category_encoders import  OneHotEncoder, OrdinalEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.feature_selection import f_classif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# инструменты для лингвистического анализа:\n",
+    "import string\n",
+    "import spacy\n",
+    "import nltk\n",
+    "from nltk.corpus import stopwords\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "# from textblob import TextBlob, Blobber\n",
+    "# from textblob.sentiments import NaiveBayesAnalyzer\n",
+    "from afinn import Afinn\n",
+    "nltk.download('vader_lexicon')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# инструменты анализа и обработки данных\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import re\n",
+    "import geopy.distance\n",
+    "from scipy import stats\n",
+    "from category_encoders import  OneHotEncoder, OrdinalEncoder\n",
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "from sklearn.feature_selection import f_classif"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# параметры отображения содержимого на экране:\n",
+    "from IPython.display import display\n",
+    "from IPython.display import Image\n",
+    "from termcolor import colored\n",
+    "pd.set_option('display.max_colwidth', None)\n",
+    "pd.set_option('display.float_format', '{:.3f}'.format)\n",
+    "pd.set_option('display.max_rows', 200)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# импортируем библиотеки для визуализации\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns \n",
+    "from wordcloud import WordCloud\n",
     "%matplotlib inline\n",
     "\n",
     "# Загружаем специальный удобный инструмент для разделения датасета:\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "# всегда фиксируйте RANDOM_SEED, чтобы ваши эксперименты были воспроизводимы!\n",
-    "RANDOM_SEED = 42"
+    "# фиксируем RANDOM_SEED и версию пакетов, чтобы эксперименты были воспроизводимы:\n",
+    "# RANDOM_SEED = 42\n",
+    "# !pip freeze > requirements.tx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# инструменты для построения модели:\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.ensemble import RandomForestRegressor # инструмент для создания и обучения модели\n",
+    "from sklearn import metrics # инструменты для оценки точности модели"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%capture\n",
+    "\n",
+    "# загружаем изображения\n",
+    "# !ls ../input/projectdata/img_score.png\n",
+    "# !ls ../input/projectdata/img.png\n",
+    "# !ls ../input/projectdata/wait.png\n",
+    "\n"
    ]
   },
   {
